; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_option.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_get_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obs_data_item = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"option\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8**)* @get_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_option(i32* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca %struct.obs_data_item*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load i8**, i8*** %5, align 8
  %8 = icmp ne i8** %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

10:                                               ; preds = %2
  %11 = load i32*, i32** %4, align 8
  %12 = call %struct.obs_data_item* @obs_data_item_byname(i32* %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  store %struct.obs_data_item* %12, %struct.obs_data_item** %6, align 8
  %13 = load %struct.obs_data_item*, %struct.obs_data_item** %6, align 8
  %14 = icmp ne %struct.obs_data_item* %13, null
  br i1 %14, label %16, label %15

15:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %23

16:                                               ; preds = %10
  %17 = load %struct.obs_data_item*, %struct.obs_data_item** %6, align 8
  %18 = call i8* @obs_data_item_get_string(%struct.obs_data_item* %17)
  %19 = load i8**, i8*** %5, align 8
  store i8* %18, i8** %19, align 8
  %20 = call i32 @obs_data_item_release(%struct.obs_data_item** %6)
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @obs_data_release(i32* %21)
  store i32 1, i32* %3, align 4
  br label %23

23:                                               ; preds = %16, %15, %9
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local %struct.obs_data_item* @obs_data_item_byname(i32*, i8*) #1

declare dso_local i8* @obs_data_item_get_string(%struct.obs_data_item*) #1

declare dso_local i32 @obs_data_item_release(%struct.obs_data_item**) #1

declare dso_local i32 @obs_data_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
